# CIR_MSc_2025-26

./: .gitignore  LICENSE  README.md  jax_schemes.py  pyproject.toml
configs/: experiments.yaml  regimes.yaml
docs/: gpu_jax_pedagogy.md  reproducibility_manifest.md  thesis_alignment_changes.md
experiments/: 02b_plot_strong_convergence.py  03c_fte_self_convergence_diagnostic.py  04_weak_convergence.py  05_zero_boundary_diagnostic.py  05b_plot_zero_boundary_diagnostic.py  check_exact_sampler.py  check_fte_brownian_coupling.py  check_fte_vs_exact.py  check_kl_uniform_vs_exact.py  fig2_0_cir_paths_terminal_distribution.py  fig2_1_feller_space.py  fig2_2_exact_transition.py  fig2_3_long_run_mean.py  fig2_4_long_run_var.py  fig_fte_variant_comparison.py  fig_klm_path_anatomy.py  fig_order_summary.py  fig_reference_pinning.py  fig_work_precision.py  kl_adaptive_splitting_paper.py  kl_adaptive_splitting_paper_jax.py  klm_fig2a_streaming.py  klm_fig3_full_diagnostic.py  klm_fig3_jax.py  run_blt_strong_error.py  run_cev_experiment.py  run_cpu_gpu_timing.py  run_distributional.py  run_klm_backstop_comparison.py  run_klm_backstop_strong_error.py  run_klm_diagnostic.py  run_reference_sensitivity.py  run_strong_error.py  run_weak_error.py
klm_jax/: __init__.py  backstop.py  coefficients.py  fig3.py  fixed_step.py
notes/: diagnostics.md
results/: blt_strong_error.csv  cev_convergence.csv  cpu_gpu_timing.csv  distributional_diagnostics.csv  fig2a_bridge_streaming_jax_h14.csv  fig3_full_diagnostic_jax_h13_fixed-hmax_fit-hmax.csv  fig_fte_variant_comparison.csv  weak_error.csv  (+18 more)
(+74 files in other folders)
