[project]
name = "cir-thesis"
version = "0.1.0"
description = "CIR numerical methods benchmark — MSc dissertation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pyyaml>=6.0.3",
    "pandas>=3.0.3",
    "jax>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
